# zmigrate

./: .gitignore  CLA.md  CODING.md  CONTRIBUTING.md  Cargo.toml  README.md  run_zcashd_dumps.sh  run_zingo_dumps.sh
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
docs/: README.md  attachments.md  bestpractices.md
src/: file_args.rs  lib.rs  main.rs  zcashd_cmd.rs  zingo_cmd.rs
tests/: test_address_migration.rs  test_dump.rs  test_incoming_viewing_keys.rs  test_transaction_assignment.rs  test_tree_size.rs  test_unified_address_migration.rs  test_utils.rs  test_witness_data.rs
