[package]
name = "zmigrate"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zmigrate"
path = "src/main.rs"

[dependencies]
zewif = "0.1.0"
zewif-zcashd = { version = "0.1.0", optional = true }
zewif-zingo = { version = "0.1.0", optional = true }

anyhow = "1.0.95"
hex = "0.4.3"
owo-colors = "4.1.0"
clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anstyle = "^1.0.1"

[dev-dependencies]
regex = "1.10.2"

[features]
default = ["zcashd"]
zcashd = ["dep:zewif-zcashd"]
zingo = ["dep:zewif-zingo"]
with-context = []

[patch.crates-io]
zewif = { path = "../zewif/" }
zewif-zcashd = { path = "../zewif-zcashd/" }
zewif-zingo = { path = "../zewif-zingo/" }

#zewif = { git = "https://github.com/nuttycom/zewif", rev = "61c988fbfb6c3e74c5b98ba3da1cbc521b3967bd" }
#zewif-zcashd = { git = "https://github.com/nuttycom/zewif-zcashd", rev = "dc7825b03e413596fcf301d9918df24dc012c22c", optional = true }
#zewif-zingo = { git = "https://github.com/nuttycom/zewif-zingo", rev = "9e647c9e5bfc9b795fdd6421d02a522f86093420", optional = true }
