[package]
name = "zmigrate"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache 2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zmigrate"
path = "src/main.rs"

[dependencies]
zewif = { path = "../zewif" }
zewif-zcashd = { path = "../zewif-zcashd" }
# zewif-zingo = { path = "../zewif-zingo" }
bc-envelope = "^0.33.0"

anyhow = "1.0.95"
hex = "0.4.3"
owo-colors = "4.1.0"
clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anstyle = "^1.0.1"
rpassword = "7.3.1"

[dev-dependencies]
regex = "^1.11.1"

[features]
default = []
with-context = []
disabled-tests = []
